--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -285,6 +285,24 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     opacity: .2
     font-weight: 40
 
+#main-content
+  position: relative
+  overflow: hidden
+
+.community
+  background: gray
+  height: 100%
+  position: absolute
+  top: 0px
+  left: 100%
+
+.community-open
+  left: 50%
+
+.community-toggle
+  left: -140px
+  position: absolute
+
 //////////
 
 .carousel-scroll
