--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -307,6 +307,9 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   top: 0px
   position: absolute
 
+.community-toggle-open
+  left: 0px
+
 //////////
 
 .carousel-scroll
