add community example

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -296,8 +296,11 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   position: absolute
   top: 0px
   left: 100%
-  padding: 20px
+  padding: 30px 20px 20px
   @include boxsizing
+  .community-content
+    height: 100%
+    overflow: auto
 
 .community-open
   left: 50%
