community example updates

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -301,6 +301,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   .community-content
     height: 100%
     overflow: auto
+    -webkit-overflow-scrolling: touch
 
 .community-open
   left: 50%
