--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -348,11 +348,13 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   position: absolute
   z-index: 999
   .hero-carousel-control
-    position: absolute
+    //position: absolute
     bottom: 0
     right: 0px
     height: 100px
     width: 65px
+    float: right
+    position: relative
 
 #hero-video
   margin-top: 40px
