--- a/app/views/techniques/index.html.haml
+++ b/app/views/techniques/index.html.haml
@@ -6,5 +6,5 @@
       - @techniques.each do |technique|
         .span4
           = link_to technique do
-            = render 'shared/media_centered', media: technique, main: 'Technique', size: 'medium'
+            = render 'shared/media_centered', media: technique, size: 'medium'
     = paginate @techniques
