change forum to community

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -25,7 +25,7 @@
                 = link_to sciences_path do
                   / %i.icon-beaker.icon-2x
                   Science
-          %li= link_to 'Forum', 'http://forum.chefsteps.com'
+          %li= link_to 'Community', 'http://forum.chefsteps.com'
           %li= link_to 'Shop', 'http://store.chefsteps.com'
           %li
             / = link_to 'Search', search_index_path
