--- a/app/views/shared/_media_hero.html.haml
+++ b/app/views/shared/_media_hero.html.haml
@@ -6,7 +6,10 @@
     .media-block
       .media
         .media-object.pull-left
-          = link_to '#', data: {youtubeid: media_object.youtube_id}, class: 'media-hero-play' do
+          / = link_to '#', data: {youtubeid: media_object.youtube_id}, class: 'media-hero-play' do
+          /   .btn-play
+          /     .btn-play-trangle
+          = link_to activity_path(media_object, autoplay: true) do
             .btn-play
               .btn-play-trangle
         .media-heading.pull-left
@@ -16,5 +19,4 @@
               = type
         .pull-right
           = link_to '#hero-carousel', class: 'hero-carousel-control right', data: {slide: 'next'} do
-            / %i.icon-chevron-right
             .btn-next
