image steps within steps

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -211,16 +211,14 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
         padding: 5px 0px
         margin: 0px
     .step-actions
-      margin-left: 10%
-      width: 90%
+      margin-bottom: 10px
       .step-action-item
         display: inline-block
       .step-ingredients
         .step-ingredients-source
           display: none
-      .step-image
-        img
-          display: none
+    .step-image
+      display: none
 
 /* Emphasizes the content being hovered */
 // .ordered-steps:hover > .ordered-step-item
