--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -22,10 +22,6 @@
               %iframe{src: youtube_url(@activity.youtube_id)}
           - elsif @activity.image_id?
             = image_tag s3_image_url(@activity.image_id)
-          #image-viewer
-            #image-viewer-container
-            #image-viewer-close
-              %i.icon-remove.icon-large
         - if @activity.description?
           .section
             :markdown
@@ -54,32 +50,22 @@
                   %h4= step.title
                 :markdown
                   #{raw step.directions}
-                / - if step.ingredients.any?
-                /   .step-ingredients
-                /     = render 'ingredients_list', ingredients: step.ingredients
-              .step-actions.btn-group
-                -if step.ingredients.any?
-                  .btn.step-action-item.step-ingredients.btn-primary
-                    %i.icon-th-list
-                    .step-ingredients-source
-                      = render 'ingredients_list', ingredients: step.ingredients
+                .step-actions.btn-group
+                  -if step.ingredients.any?
+                    .btn.step-action-item.step-ingredients.btn-primary
+                      %i.icon-th-list
+                      .step-ingredients-source
+                        = render 'ingredients_list', ingredients: step.ingredients
+                  - if step.image_id?
+                    .btn.step-action-item.step-image-btn.btn-primary
+                      %i.icon-picture
                 - if step.image_id?
-                  .btn.step-action-item.step-image.btn-primary
-                    %i.icon-picture
-                    .step-image-source
-                      = image_tag s3_image_url(step.image_id)
+                  .step-image
+                    = image_tag s3_image_url(step.image_id)
       .span6.community
         .community-toggle
           .btn.btn-primary
             %i.icon-comments Community
-        / %h4= @discussion[:name]
-        / %blockquote
-        /   %p= truncate(@discussion[:body].html_safe, length: 300, separator: ' ')
-        /   %small
-        /     %cite
-        /       = @discussion[:first_name]
-        - #discussion_link = @discussion[:url].gsub('https://chefsteps.vanillaforums.com','http://forum.chefsteps.com')
-        / = link_to 'Join the Discussion', discussion_link, class: 'btn btn-primary'
         .community-content
           %h4 Salmon and albumin
           %blockquote
