--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -511,7 +511,8 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 /* Scroll Shadow */
 .scroll-shadow-overlay-top
-  height: 40px
+  pointer-events: none
+  height: 60px
   width: 100%
   position: absolute
   background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%) /* FF3.6+ */
@@ -523,7 +524,8 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ) /* IE6-9 */
 
 .scroll-shadow-overlay-bottom
-  height: 40px
+  pointer-events: none
+  height: 60px
   width: 100%
   position: absolute
   bottom: 0px
