add scroll opacity

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -510,11 +510,13 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
       background-color: $dark-orange
 
 /* Scroll Shadow */
+
 .scroll-shadow-overlay-top
   pointer-events: none
-  height: 60px
+  height: 120px
   width: 100%
   position: absolute
+  top: 0px
   background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%) /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))) /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%) /* Chrome10+,Safari5.1+ */
@@ -525,7 +527,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 .scroll-shadow-overlay-bottom
   pointer-events: none
-  height: 60px
+  height: 120px
   width: 100%
   position: absolute
   bottom: 0px
