--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -511,12 +511,19 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 /* Scroll Shadow */
 
-.scroll-shadow-overlay-top
+.scroll-overlay-top
+
+
+.scroll-overlay-bottom
+
+
+.scroll-overlay-top
   pointer-events: none
   height: 120px
   width: 100%
   position: absolute
   top: 0px
+  display: none
   background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%) /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))) /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%) /* Chrome10+,Safari5.1+ */
@@ -525,12 +532,13 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%) /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ) /* IE6-9 */
 
-.scroll-shadow-overlay-bottom
+.scroll-overlay-bottom
   pointer-events: none
   height: 120px
   width: 100%
   position: absolute
   bottom: 0px
+  display: none
   background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%) /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))) /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* Chrome10+,Safari5.1+ */
