--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -4,14 +4,6 @@
 - content_for :keywords, @activity.tag_list.join(',')
 
 .row
-  %h3 Scroll Y
-  #scrollable-y
-  %h3 Window Height
-  #scrollable-window-height
-  %h3 Total Height
-  #scrollable-total-height
-
-.row
   .span6
     %h1= @activity.title.html_safe
   .span6
@@ -71,8 +63,8 @@
                   - if step.image_id?
                     .step-image{id: "step-image-#{index}"}
                       = image_tag s3_image_url(step.image_id)
-        .scroll-shadow-overlay-top.pull-left
-        .scroll-shadow-overlay-bottom
+        .scroll-overlay-top
+        .scroll-overlay-bottom
       .span6.community
         .community-toggle
           .btn.btn-primary
