--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,6 +10,10 @@
             %div{class: "item #{'active' if index == 0}", id: "#{'hero-first' if index == 0}"}
               = render 'shared/media_hero', main_title: hero.activity_type? ? hero.activity_type : 'Recipe', media_image: hero.step_images.last, media_object: hero
 
+        %ol.carousel-indicators
+          - @heroes.each_with_index do |hero, index|
+            %li{class: "#{'active' if index == 0}",data: {target: '#hero-carousel', :'slide-to' => index}}
+
 .row
   .span12
     .carousel.slide#recipe-carousel
