--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -589,6 +589,10 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
         height: 70px
       .media-heading
         margin-bottom: 0px
+        width: 65%
+        .label-large
+          font-size: 12px
+          padding: 2px 5px
       .hero-carousel-control
         height: 70px
         width: 35px
