mobile hero carousel fix

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -590,6 +590,8 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
       .media-heading
         margin-bottom: 0px
         width: 65%
+        h2
+          margin: 5px 0px
         .label-large
           font-size: 12px
           padding: 2px 5px
