--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -150,6 +150,10 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     width: inherit
     bottom: 0px
     @include boxsizing
+    .media-heading
+      width: 75%
+      h2
+        font-size: 28px
     .media-object
       .icon-play
         font-size: 60px
@@ -566,6 +570,12 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
       margin-top: -15%
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px)
+  #hero-container
+    #hero-carousel
+      .media-heading
+        width: 72%
+        h2
+          font-size: 20px
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
