--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -322,6 +322,21 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
       float: left
       display: none
 
+/* Swipe */
+.swipe
+  overflow: hidden
+  visibility: hidden
+  position: relative
+
+.swipe-wrap
+  overflow: hidden
+  position: relative
+
+.swipe-wrap > div
+  float: left
+  width: 100%
+  position: relative
+
 ////////////////////////////////////////
 
 /* Unique Styles */
