fix large overlay bug

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -583,6 +583,11 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   .media-hero
     img
       margin-top: -15%
+
+@media (max-width: 1200px)
+  .media-centered-medium
+    height: inherit
+
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px)
   #hero-container
