--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -334,19 +334,18 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   overflow: hidden
   visibility: hidden
   position: relative
-  .swipe-indicators
-    width: 45px
-    margin: 10px auto
-  .swipe-indicator-btn
-    background: gray
-    height: 20px
-    width: 20px
-    display: inline-block
-    text-align: center
-    margin: 0 auto
-    border-radius: 10px
-  .indicator-active
-    background: $dark_orange
+.swipe-indicators
+  margin: 10px auto
+.swipe-indicator-btn
+  background: gray
+  height: 20px
+  width: 20px
+  display: inline-block
+  text-align: center
+  margin: 0 auto
+  border-radius: 10px
+.indicator-active
+  background: $dark_orange
 
 .swipe-wrap
   overflow: hidden
@@ -356,6 +355,12 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   float: left
   width: 100%
   position: relative
+
+#hero-indicators
+  width: 100px
+
+#content-indicators
+  width: 45px
 
 ////////////////////////////////////////
 
