--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -357,7 +357,15 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   position: relative
 
 #hero-indicators
-  width: 100px
+  width: 68px
+
+.hero-swiper-next
+  bottom: 0
+  right: 0px
+  height: 100px
+  width: 65px
+  float: right
+  position: relative
 
 #content-indicators
   width: 45px
