--- a/app/views/shared/_media_hero.html.haml
+++ b/app/views/shared/_media_hero.html.haml
@@ -18,5 +18,5 @@
             %div{class: "label label-large label-#{type}"}
               = type
         .pull-right
-          = link_to '#hero-carousel', class: 'hero-carousel-control right', data: {slide: 'next'} do
+          = link_to 'javascript:void(0);', class: 'hero-swiper-next' do
             .btn-next
