--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,12 +1,13 @@
 - content_for :title, course.title
 - content_for :description, course.short_description
 
-.hero-unit.course-title
-  .container
-    .row
-      .span8
-        %h3= course.title
+/ .hero-unit.course-title
+/   .container
+/     .row
+/       .span8
+/         %h3= course.title
 
+%h2= course.title
 .container
   .row.top-video
     .span12
