--- a/app/views/layouts/_disqus_comments.html.erb
+++ b/app/views/layouts/_disqus_comments.html.erb
@@ -1,4 +1,4 @@
-<div class="hero-unit hero-comments noprint">
+<div class="hero-comments noprint">
   <div class="container">
   <div class="row comments">
       <div class="span12">
