--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -158,6 +158,9 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
       .icon-play
         font-size: 60px
 
+#video-ingredient-unit
+  min-height: 600px
+
 .video-container
   position: relative
   padding-bottom: 56.25%
@@ -309,6 +312,25 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 .community-toggle-open
   left: 0px
+
+/* Course */
+// Selects popover directly after syllabus-popover
+.syllabus-popover + .popover
+  max-width: 400px
+  margin-left: -45px
+  .popover-content 
+    height: 500px
+    overflow: auto
+    -webkit-overflow-scrolling: touch
+
+.course-syllabus
+  .nested-0
+    font-weight: bold
+    margin-top: 20px
+  .nested-1
+    padding-left: 10px
+  .nested-2
+    padding-left: 20px
 
 //////////
 
