--- a/app/views/courses/_syllabus.html.haml
+++ b/app/views/courses/_syllabus.html.haml
@@ -1,13 +1,13 @@
-%h4= course.title
-- course.inclusions.each do |inclusion|
-  - case inclusion.nesting_level
-  - when 0
-    / = inclusion.nesting_level
-    %h5= inclusion.activity.title
-  - when 1
-    = "&nbsp;".html_safe*4 + inclusion.activity.title
-    %br
-  - when 2
-    %small
-      = "&nbsp;".html_safe*12 + inclusion.activity.title
-    %br
+.course-syllabus
+  - course.inclusions.each do |inclusion|
+    = link_to course_activity_path(course, inclusion.activity) do
+      - case inclusion.nesting_level
+      - when 0
+        .nested-0
+          = inclusion.activity.title
+      - when 1
+        .nested-1
+          = inclusion.activity.title
+      - when 2
+        .nested-2
+          = inclusion.activity.title
