--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -314,23 +314,15 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   left: 0px
 
 /* Course */
-// Selects popover directly after syllabus-popover
-.syllabus-popover + .popover
-  max-width: 400px
-  margin-left: -45px
-  .popover-content 
-    height: 500px
-    overflow: auto
-    -webkit-overflow-scrolling: touch
-
 .course-syllabus
-  .nested-0
-    font-weight: bold
-    margin-top: 20px
   .nested-1
     padding-left: 10px
   .nested-2
     padding-left: 20px
+  a
+    color: black
+    &:hover
+      color: $orange
 
 //////////
 
@@ -572,6 +564,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     background: $dark-orange
     text-decoration: none
     color: white
+    cursor: pointer
 
 /* Navbar */
 .navbar-fixed-top
