--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -87,6 +87,9 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   border-radius: 0px
   @include shadow
 
+.modal
+  border-radius: 0px
+
 ////////////////////////////////////////
 
 /* Media Objects */
